tests/ui/fail/invalid_fn_calls.stderr
error: Potentially invalid expansion. Expected `::`, `break`, `if`, `return`, a `)`, a `[`, a `{`, a literal, an identifier.
 --> tests/ui/fail/invalid_fn_calls.rs:6:18
  |
6 |         $fn_name(,)
  |                  ^

error: Potentially invalid expansion. Expected `::`, `break`, `if`, `return`, a `)`, a `[`, a `{`, a literal, an identifier.
  --> tests/ui/fail/invalid_fn_calls.rs:14:18
   |
14 |         $fn_name(,,)
   |                  ^

error: Potentially invalid expansion. Expected `!=`, `%`, `&&`, `&`, `*`, `+`, `,`, `-`, `..=`, `..`, `.`, `/`, `<<`, `<=`, `<`, `==`, `>=`, `>>`, `>`, `^`, `|`, `||`, a `(`, a `)`.
  --> tests/ui/fail/invalid_fn_calls.rs:22:25
   |
22 |         $fn_name($arg1 $arg2)
   |                         ^^^^
